--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 	<audio autoplay loop>
-		<source src="uoc_mo_cua_me.m4a" type="audio/mpeg">
+		<source src="uoc_mo_cua_me.mp3" type="audio/mpeg">
 		Your browser does not support the audio element.
 	</audio>
 	<h1>Con chúc mừng sinh nhật 48 tuổi của mẹ nha 🌹🎉</h1>
